--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav id="parent">
     <div id="child">
       <div style="float: left; padding: 10px;padding-bottom: 3px;padding-top:13px;">
-        Quark Editor
+        Quark Editor - By Sheshank Shankar
       </div>
       <div style="float: right;">
 
