--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <nav id="parent">
     <div id="child">
-      <div style="float: left; padding: 10px;padding-bottom: 3px;padding-top:13px;">
+      <div style="float: left; padding: 15px;padding-bottom: 3px;padding-top:13px;">
         Quark Editor
       </div>
       <div style="float: right;">
@@ -113,28 +113,19 @@
 
     </div>
   </nav>
-  <table style="width: 100%; height: 100%;" cellspacing="0" cellpadding="0">
-    <tr style="width: 100%; height: 100%;">
-      <td style="height: 100%; width: 50%;">
-        <div id="editor"></div>
-      </td>
-      <td style="height: 100%;width: 50%;">
-        <div id="output-container">
-          <iframe style="border:0px; height: 100%; width: 100%;" id="output">
-            <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <meta charset="utf-8" />
-            </head>
-            <body>
-
+      <div id="editor" style="position: absolute;left: 0;right: 50%;width:50%;height:100%;"></div>
+      <div id="output-container" style="position: absolute;left: 50%;right: 0;width:50%;height:100%;">
+        <iframe style="border:0px; height: 100%; width: 100%;" id="output">
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+            <meta charset="utf-8" />
+          </head>
+          <body>
             </body>
-            </html>
-          </iframe>
-        </div>
-      </td>
-    </tr>
-  </table>
+          </html>
+        </iframe>
+      </div>
   <script src="ace-builds-master/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
