--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Quark HTML/CSS/JS Editor</title>
+  <title>Quark | HTML/CSS/JS Editor</title>
   <meta name="description" content="The Quark Editor: HTML CSS JS">
   <meta name="author" content="Sheshank Shankar">
 
