Add Tommorow theme

--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
           <div style="display:inline;">Theme:</div>
            &nbsp; &nbsp;
           <div class="dropdown" style="display:inline;">
-            <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Quark Dark
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Quark Tommorow Dark
               <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
               <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:dark()">Quark Dark</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:idle()">Quark Gray</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:blue()">Quark Blue</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:light()">Quark Light</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:tommorowlight()">Quark Tomorrow Light</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:tommorowdark()">Quark Tomorrow Dark</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:tommorowblue()">Quark Tomorrow Blue</a></li>
             </ul>
           </div>
           <br />
