--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- <link rel="icon" type="image/jpeg" href="quarklogo.jpg" /> -->
-  <link rel="icon" type="image/png" href="quarklogo2.png" />
+  <link rel="icon" type="image/jpeg" href="quarklogo.jpg" />
 </head>
 
 <body>
