--- a/404.html
+++ b/404.html
@@ -33,6 +33,6 @@
 
 <center> 
 <h1> 404 Not Found </h1>
-<p> The Page requested can't be found, If you thing this is wrong <a href="https://github.com/greenbayrules/quark-editor/issues/"> Create A Issue </a>
+<p> The Page requested can't be found, If you thing this is wrong <a href="https://github.com/greenbayrules/quark-editor/issues/"> Create A Issue </a> </p>
 </body>
 </html>
