Add functionality to Beautify, and remove preview when java and python are up

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div class="dropdown1 hi">
-          <div class="dropbtn" href="javascript:beautify()" data-toggle="tooltip" data-placement="top" title="Disfunctional right now">
+          <div class="dropbtn" onclick="beautify()" data-toggle="tooltip" data-placement="top" title="Disfunctional right now">
             Beautify
           </div>
         </div>
