--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
   <script src="ace-builds-master/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
+<script src="ace/ext-language_tools.js"></script>
 </body>
 
 </html>
