--- a/404.html
+++ b/404.html
@@ -24,9 +24,11 @@
   <style>
    h1 {
    font-family: 'Roboto', sans-serif;
+    }
    
    a {
    border-color:blue;
+    }
    <style>
 </head>
 <body>
@@ -34,5 +36,6 @@
 <center> 
 <h1> 404 Not Found </h1>
 <p> The Page requested can't be found, If you thing this is wrong <a href="https://github.com/greenbayrules/quark-editor/issues/"> Create A Issue </a> </p>
-</body>
+</center>
+    </body>
 </html>
