Change open-source section wording.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div style="text-align: right; color: #aaaaaa;">
           Quark Editor is made by <a href="https://sheshank.com">Sheshank Shankar</a> &copy; 2018
           <br />
-          Our <i class="fa fa-code" aria-hidden="true"></i> is open-source. View <a href="https://github.com/GreenBayRules/quark-editor">here</a>.
+          Our <i class="fa fa-code" aria-hidden="true"></i> is open-source. View it <a href="https://github.com/GreenBayRules/quark-editor">here</a>.
         </div>
       </div>
     </div>
